@@ -46,8 +46,7 @@ void test_051()
 	0,
 	"Bad position after seeking to beginning of large object.");
 
-      using lobj_size_t = largeobjectaccess::size_type;
-      A.write(Buf, lobj_size_t(Contents.size()));
+      A.write(Buf, static_cast<int>(Contents.size()));
       A.seek(0, std::ios::beg);
       PQXX_CHECK_EQUAL(
 	size_t(A.read(Buf, Size)),
