@@ -33,6 +33,8 @@
  - Internal overflows are more consistently caught and reported.
  - Items marked "deprecated" have been removed.
  - win32/libpqxx.cxx and DllMain did not seem to be needed, so they're gone.
+ - Large objects now require backend version 9.3 or better.
+ - Seeking inside large objects now supports 64-bit sizes.
 6.4.4
  - Use pkg-config if pg-config is not available.
  - In CMake build, prefer CMake's config headers over any found in source tree.
